# raspberrypi-omxcam

./: CMakeLists.txt  omxcamConfig.cmake.in
examples/: CMakeLists.txt
examples/still/jpeg/: jpeg.c
